# Hole_Calculations

./: CMakeLists.txt  main.cpp  result.xml
Algorithm/: Algorithm.cpp
Algorithm/Include/: Algorithm.h
Display/: Display.cpp  DisplayTools.cpp
Display/Include/: Display.h  DisplayTools.h
Objects/: Alarm.cpp  Field.cpp  Hole.cpp
Objects/Geometry/: Circle.cpp  Point.cpp  Point.h  Rectangle.cpp  Segment.cpp  Segment.h  Shape.h
Objects/Include/: Alarm.h  Circle.h  Field.h  Hole.h  Object.h  Point.h  Rectangle.h  Shape.h
io_tools/: XMLParser.cpp  XMLParser.h
